payas-core-subsystem/payas-core-resolver/src/validation/snapshots/payas_core_resolver__validation__document_validator__tests__invalid_subfield.snap
---
source: payas-resolver/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    InvalidField(
        "foobar",
        "Concert",
        Pos(6:21),
    ),
)
