payas-core-subsystem/payas-core-resolver/src/validation/snapshots/payas_core_resolver__validation__document_validator__tests__multi_operations_mismatched_operation_name_invalid.snap
---
source: payas-resolver/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    MultipleOperationsUnmatchedOperationName(
        "foo",
    ),
)
